Fix dashboards visible

--- a/PLATFORM/VirtoCommerce.Platform.Web/Content/themes/main/css/base-modules.css
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Content/themes/main/css/base-modules.css
@@ -6815,6 +6815,7 @@ input.ui-grid-filter-input[type="text"]
     .gridster .gridster-cnt,
     .gridster [ng-model="widget"]
     {
+        overflow: hidden;
         text-align: center;
     }
 
